@@ -1,5 +1,5 @@
 APACHE 2.0 STATUS:                                              -*-text-*-
-Last modified at [$Date: 2004/02/03 15:30:57 $]
+Last modified at [$Date: 2004/02/03 21:51:38 $]
 
 Release:
 
@@ -159,10 +159,6 @@ PATCHES TO BACKPORT FROM 2.1
       +0: wrowe {Pending research into how to get AC to use -lsockets et. al.,
                  shows breakage on Solaris which can't -lcrypto -lssl without
                  the extra pkgconfig/openssl.pc Libs: * foo }
-
-    * Backport wildcard ExpiresByType patch
-      modules/metadata/mod_expires.c r1.45
-      +1: ken, stoddard, rederpj
 
     * PREREQ for another fix (stranded piped logger processes) - 
       ap_mpm_query(AP_MPMQ_MPM_STATE)
