@@ -1,5 +1,8 @@
 Changes with Apache 2.0.49
 
+  *) Add support for IMT minor-type wildcards (e.g., text/*) to
+     ExpiresByType.  PR#7991  [Ken Coar]
+
   *) Fix segfault in mod_mem_cache cache_insert() due to cache size
      becoming negative.  PR: 21285, 21287
      [Bill Stoddard, Massimo Torquati, Jean-Jacques Clar]
